<resources>
    <string name="app_name">飞腾考勤助手</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_re">再次输入密码</string>
    <string name="prompt_realname">真实姓名</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_load_remember">记住密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="prompt_phonenum">公司登记手机号</string>
    <string name="action_register">注 册</string>


    <string name="loading_busy">努力加载中...</string>
    <string name="tips_net_error">网络不给力\n点击屏幕继续加载</string>
    <string name="tips_content_empty">空空如也</string>

    <string name="item_title_1">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_kq_type">类型：</string>
    <string name="name_kq_duration">时长：</string>
    <string name="name_kq_project">项目：</string>
    <string name="name_kq_empolyee">人员：</string>

    <string name="kq_info">考勤信息</string>

    <string-array name="kq_type_item">
        <item>加班</item>
        <item>请假</item>
        <item>出差</item>
    </string-array>
    <string-array name="screen_kq_type_item">
        <item>全部</item>
        <item>加班</item>
        <item>请假</item>
        <item>出差</item>
    </string-array>

    <string-array name="kq_duration_unit_item">
        <item>时</item>
        <item>天</item>
    </string-array>
</resources>
