<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_kqinfo">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_kqtype"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_kq_type"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            />
        <Spinner
            android:id="@+id/spinner_kq_type"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            >
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_kqduration"
        android:layout_below="@+id/linearlayout_kqtype"
        android:orientation="horizontal"
        android:layout_alignRight="@id/linearlayout_kqtype"
        android:layout_alignLeft="@id/linearlayout_kqtype"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_kq_duration"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            />
        <EditText
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/edittext_kq_duration"
            android:layout_marginLeft="10dp"/>
        <Spinner
            android:id="@+id/spinner_kq_duration_unit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_kqproject"
        android:layout_below="@id/linearlayout_kqduration"
        android:orientation="horizontal"
        android:layout_alignLeft="@id/linearlayout_kqtype"
        android:layout_alignRight="@id/linearlayout_kqtype"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_kq_project"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_kq_project"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_kqemployee"
        android:layout_below="@id/linearlayout_kqproject"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_kq_empolyee"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_kq_employee"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_remark"
        android:layout_below="@id/linearlayout_kqemployee"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="备注："
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_kq_remark"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
</RelativeLayout>