<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background"
              tools:context=".activity.RegisterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=" "
            android:textSize="64dp"/>

        <ViewStub
            android:id="@+id/activity_loading_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_loading_subTree"
            android:layout="@layout/common_loading"
            />

        <ViewStub
            android:id="@+id/activity_net_error_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_net_error_subTree"
            android:layout="@layout/common_net_error_layout"/>

        <ViewStub
            android:id="@+id/activity_empty_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_empty_subTree"
            android:layout="@layout/common_tips_layout"/>

        <!-- Login progress -->
        <!--<ProgressBar-->
            <!--android:id="@+id/progressbar_register"-->
            <!--style="?android:attr/progressBarStyleLarge"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:visibility="gone"/>-->


        <LinearLayout
            android:id="@+id/linearLayout_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edittext_register_userid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/prompt_username"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edittext_register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edittext_register_password_re"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password_re"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edittext_register_realname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/prompt_realname"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edittext_register_phonenum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/prompt_phonenum"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_register_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="#fff"
                android:background="@drawable/button_style"
                android:textSize="18dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
