<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background"
              tools:context=".activity.LoginActivity"
              android:configChanges="orientation|keyboardHidden|navigation"
              android:windowSoftInputMode="adjustPan">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textSize="64sp"/>

        <ViewStub
            android:id="@+id/activity_loading_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_loading_subTree"
            android:layout="@layout/common_loading"
            />

        <ViewStub
            android:id="@+id/activity_net_error_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_net_error_subTree"
            android:layout="@layout/common_net_error_layout"/>

        <ViewStub
            android:id="@+id/activity_empty_stub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inflatedId="@+id/activity_empty_subTree"
            android:layout="@layout/common_tips_layout"/>

        <!--<ProgressBar-->
            <!--android:id="@+id/progressbar_login"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="?android:progressBarStyleLarge"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:visibility="gone"-->
            <!--/>-->

        <LinearLayout
            android:id="@+id/linearLayout_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <!--<TextView-->
                    <!--android:layout_width="60dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:textColor="#FFF"-->
                    <!--android:text="@string/prompt_email"-->
                    <!--android:textSize="18dp"/>-->

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/edittext_login_userid"
                    android:hint="@string/prompt_username"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <!--<TextView-->
                    <!--android:layout_width="60dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:textColor="#FFF"-->
                    <!--android:text="@string/prompt_password"-->
                    <!--android:textSize="18dp"/>-->

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/edittext_login_password"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/edittext_style"
                    android:maxLines="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:background="@drawable/button_style"
                android:textSize="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_load_remember"
                        android:id="@+id/checkbox_remember_pass"
                        android:textSize="16dp"
                        android:textColor="#fff"
                        android:layout_marginTop="16dp"/>
                    <EditText
                        android:id="@+id/edittext_login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user_register"
                        android:textIsSelectable="false"
                        android:focusable="false"
                        android:gravity="right"
                        android:textSize="16dp"
                        android:editable="false"
                        android:clickable="true"
                        android:textColor="#fff"
                        android:layout_toRightOf="@id/checkbox_remember_pass"
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@id/checkbox_remember_pass"
                        android:background="@null"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

